--- a/1010_Word/.env
+++ b/1010_Word/.env
@@ -1,2 +1,2 @@
-TELEGRAM_API_TOKEN=7324218481:AAGSe8YWQbzwHOdDdJ2ORA6wGKyrRlNeDgU
-TELEGRAM_CHAT_ID=-1002277563818
+TELEGRAM_API_TOKEN=
+TELEGRAM_CHAT_ID=
